--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="container">
       <div class="row">
         <div class="col d-flex justify-content-center">
-          <div class="card rounded">
+          <div class="card rounded" style="width: 18em;">
             <img src="https://i.ibb.co/r20X2JJ/apart1.png" class="card-img-top rounded-top" alt="Apart 1">
             <div class="card-body">
               <p class="card-text">Pills Empire State</p>
@@ -80,7 +80,7 @@
           </div>
         </div>
         <div class="col d-flex justify-content-center">
-          <div class="card rounded">
+          <div class="card rounded" style="width: 18em;">
             <img src="https://i.ibb.co/YfQMTgM/image.png" class="card-img-top rounded-top" alt="Apart 2">
             <div class="card-body">
               <p class="card-text">One World Estate</p>
@@ -90,7 +90,7 @@
           </div>
         </div>
         <div class="col d-flex justify-content-center">
-          <div class="card rounded">
+          <div class="card rounded" style="width: 18em;">
             <img src="https://i.ibb.co/S7qZ9cx/image.png" class="card-img-top rounded-top" alt="Apart 3">
             <div class="card-body">
               <p class="card-text">Arch Gateway Estate</p>
